--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/wizardabhi77/Restaurant-Page#readme",
   "devDependencies": {
+    "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.4",
     "webpack": "^5.102.1",
     "webpack-cli": "^6.0.1",
